--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "doubleu23-stylus",
-  "version": "0.2.7",
+  "version": "0.2.8",
   "description": "A little collection of mixins helpers and some other stuff",
   "main": "lib/doubleu23-stylus.js",
   "scripts": {
@@ -23,6 +23,6 @@
   "homepage": "https://github.com/doubleu23/style.boilerplate#readme",
   "dependencies": {
     "path": "^0.12.7",
-    "stylus": "^0.52.4"
+    "stylus": "0.54.5"
   }
 }
